--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -7,5 +7,9 @@
 }
 
 body {
-  @apply flex flex-col justify-center m-auto bg-black text-white;
+  @apply flex flex-col justify-center gap-y-8 bg-black text-white;
+
+  section {
+    @apply max-w-container m-default;
+  }
 }
