--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -10,7 +10,7 @@ body {
   @apply flex flex-col justify-center gap-y-8 bg-black text-white;
 
   section {
-    @apply flex flex-col gap-y-6 max-w-container m-default;
+    @apply flex flex-col items-center gap-y-6 max-w-container m-default;
 
     h2 {
       @apply text-left text-3xl;
