--- a/src/pages/main/components/choose/Choose.module.scss
+++ b/src/pages/main/components/choose/Choose.module.scss
@@ -3,13 +3,33 @@
 
   .card {
     @apply relative w-1/3 flex flex-col gap-y-2 p-4 bg-stone-900 rounded-default;
+    &:hover {
+      @apply text-black bg-acid-green;
+      p {
+        @apply text-black;
+      }
+      .flash {
+        @apply bg-black;
+        svg {
+          @apply text-acid-green;
+        }
+      }
+    }
 
     img {
-      @apply relative h-1/3 object-cover;
+      @apply relative object-cover w-[100px] h-[100px];
     }
 
     div {
       @apply flex justify-between;
+    }
+
+    .flash {
+      @apply w-8 h-8 flex items-center justify-center rounded-full bg-acid-green;
+
+      svg {
+        @apply text-black;
+      }
     }
   }
 }
