--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -7,10 +7,10 @@
 }
 
 body {
-  @apply flex flex-col justify-center bg-black  text-white;
+  @apply flex flex-col items-center m-default bg-black text-white;
 
   section {
-    @apply relative py-12 flex flex-col items-center gap-y-6  max-w-container m-default;
+    @apply relative py-12 flex flex-col items-center gap-y-6 max-w-container;
 
     h2 {
       @apply text-left text-3xl;
