--- a/src/pages/main/components/coaches/components/SwiperCoaches/SwiperCoaches.module.scss
+++ b/src/pages/main/components/coaches/components/SwiperCoaches/SwiperCoaches.module.scss
@@ -2,7 +2,7 @@
   @apply w-full;
 
   .card {
-    @apply flex flex-col gap-3;
+    @apply flex flex-col gap-3 w-1/3;
 
     img {
       @apply h-[350px] object-cover;
