--- a/src/pages/main/components/hero/components/SwiperHero/SwiperHero.module.scss
+++ b/src/pages/main/components/hero/components/SwiperHero/SwiperHero.module.scss
@@ -1,7 +1,14 @@
 .swiperContainer {
-  @apply w-[80%];
+  @apply w-full;
+
+  .card {
+    @apply w-1/3 flex flex-col items-center gap-4 text-center;
+    h1 {
+      @apply text-5xl;
+    }
+  }
 
   .buttonsContainer {
-    @apply flex gap-4 justify-center mb-4;
+    @apply flex justify-center gap-2 my-8;
   }
 }
