--- a/src/pages/main/components/hero/Hero.module.scss
+++ b/src/pages/main/components/hero/Hero.module.scss
@@ -4,15 +4,11 @@
   .heroBg {
     @apply bg-hero-gradient h-full w-full flex flex-col items-center gap-y-36;
 
-    section {
-      @apply max-w-container flex flex-col items-center gap-y-4;
+    .swiperContainer {
+      @apply w-full;
 
-      h1 {
-        @apply text-5xl text-center;
-      }
-
-      p {
-        @apply text-center;
+      .buttonsContainer {
+        @apply flex justify-center gap-2 my-8;
       }
     }
   }
