--- a/src/components/SwiperButtons/SwiperButtons.module.scss
+++ b/src/components/SwiperButtons/SwiperButtons.module.scss
@@ -1,5 +1,5 @@
 .buttonContainer {
-  @apply w-full flex justify-center gap-4;
+  @apply w-full flex justify-center gap-4 mt-4;
 
   button {
     @apply text-4xl cursor-pointer z-[1];
