--- a/src/pages/main/components/hero/Hero.module.scss
+++ b/src/pages/main/components/hero/Hero.module.scss
@@ -14,9 +14,9 @@
   }
 
   .marqueeContainer {
-    @apply relative h-[35px] w-full bg-acid-green overflow-hidden;
+    @apply relative flex gap-8 h-[35px] w-full bg-acid-green overflow-hidden;
     .marquee {
-      @apply absolute w-[200%] flex gap-8 text-right text-black py-1  animate-marquee;
+      @apply flex gap-8 text-right text-black;
 
       span {
         @apply flex items-center gap-8;
