--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -10,7 +10,8 @@ body {
   @apply flex flex-col items-center m-default bg-black text-white;
 
   section {
-    @apply relative py-12 flex flex-col items-center gap-y-6 max-w-container;
+    @apply relative py-12 flex flex-col items-center gap-y-6 
+    sm:max-w-lg md:max-w-2xl lg:max-w-3xl xl:max-w-container 2xl:max-w-6xl;
 
     h2 {
       @apply text-left text-3xl;
