--- a/src/pages/main/components/choose/Choose.module.scss
+++ b/src/pages/main/components/choose/Choose.module.scss
@@ -1,8 +1,8 @@
 .container {
-  @apply flex gap-4;
+  @apply flex gap-4 sm:flex-col md:flex-row;
 
   .card {
-    @apply relative w-1/3 flex flex-col gap-y-2 p-4 bg-stone-900 rounded-default;
+    @apply relative w-full p-12 flex flex-col gap-y-2  bg-stone-900 rounded-default md:w-1/3 md:p-4;
     &:hover {
       @apply text-black bg-acid-green;
       p {
