--- a/src/pages/main/components/reviews/components/ReviewsSwiper/ReviewsSwiper.module.scss
+++ b/src/pages/main/components/reviews/components/ReviewsSwiper/ReviewsSwiper.module.scss
@@ -1,3 +1,6 @@
 .container {
-  @apply absolute top-[40%] left-[5%] w-[400px] text-black;
+  @apply absolute text-black left-[5%] w-1/3
+  sm:top-[35%] sm:w-2/5
+  md:top-[50%] 
+  xl:top-[60%] xl:w-1/3;
 }
