--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -10,11 +10,13 @@ body {
   @apply flex flex-col items-center m-default bg-black text-white;
 
   section {
-    @apply relative py-12 flex flex-col items-center gap-y-6 
-    sm:max-w-lg md:max-w-2xl lg:max-w-3xl xl:max-w-container 2xl:max-w-6xl;
+    @apply relative py-12 px-2 flex flex-col items-center gap-y-6 
+    min-[320px]:max-w-xs
+    sm:max-w-lg 
+    md:px-0 md:max-w-2xl lg:max-w-3xl xl:max-w-container 2xl:max-w-6xl;
 
     h2 {
-      @apply text-left text-3xl;
+      @apply text-left min-[320px]:text-xl sm:text-3xl;
     }
 
     p {
