--- a/src/pages/main/components/choose/Choose.module.scss
+++ b/src/pages/main/components/choose/Choose.module.scss
@@ -1,5 +1,5 @@
 .container {
-  @apply flex gap-4 sm:flex-col md:flex-row;
+  @apply flex flex-col gap-4 md:flex-row;
 
   .card {
     @apply relative w-full p-12 flex flex-col gap-y-2  bg-stone-900 rounded-default md:w-1/3 md:p-4;
