--- a/src/pages/main/components/hero/components/HeroCards/HeroCards.module.scss
+++ b/src/pages/main/components/hero/components/HeroCards/HeroCards.module.scss
@@ -1,6 +1,10 @@
 .card {
   @apply w-1/3 flex flex-col items-center gap-4 text-center;
   h1 {
-    @apply text-5xl;
+    @apply min-[320px]:text-2xl sm:text-5xl;
+  }
+
+  p {
+    @apply min-[320px]:text-xs sm:text-base;
   }
 }
