--- a/src/pages/main/components/news/News.module.scss
+++ b/src/pages/main/components/news/News.module.scss
@@ -2,7 +2,7 @@
   @apply bg-stone-900 max-w-none w-full py-12;
 
   .container {
-    @apply flex flex-col items-center gap-y-4;
+    @apply w-full flex flex-col items-center gap-y-4;
 
     p {
       @apply text-center;
