feat: add contacts page

--- a/src/UI/header/Header.module.scss
+++ b/src/UI/header/Header.module.scss
@@ -1,5 +1,9 @@
 .header {
-  @apply z-[1] absolute w-full flex justify-around pt-4;
+  @apply z-[1] w-full flex justify-around py-4;
+
+  &.abs {
+    @apply absolute;
+  }
 
   ul {
     @apply flex gap-20;
