--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -7,7 +7,7 @@
 }
 
 body {
-  @apply flex flex-col items-center m-default bg-black text-white;
+  @apply flex flex-col justify-between items-center m-default bg-black text-white;
 
   section {
     @apply relative py-12 px-2 flex flex-col items-center gap-y-6 
