--- a/src/UI/header/components/MobileMenu/MobileMenu.module.scss
+++ b/src/UI/header/components/MobileMenu/MobileMenu.module.scss
@@ -1,3 +1,11 @@
+.navigation {
+  @apply hidden;
+
+  &.active {
+    @apply block;
+  }
+}
+
 .buttonContainer {
   @apply flex flex-row-reverse items-center gap-4;
 }
