--- a/src/assets/styles/_button.scss
+++ b/src/assets/styles/_button.scss
@@ -1,4 +1,4 @@
 @mixin button() {
-  @apply text-black bg-acid-green rounded-3xl px-4 py-2 shadow-button
+  @apply text-black bg-acid-green rounded-3xl px-4 pt-[10px] pb-[10px] shadow-button
 transition-all hover:bg-lime-400 hover:shadow-lime-400 active:scale-90;
 }
