--- a/src/UI/header/components/MobileMenu/MobileMenu.module.scss
+++ b/src/UI/header/components/MobileMenu/MobileMenu.module.scss
@@ -8,4 +8,10 @@
 
 .buttonContainer {
   @apply flex flex-row-reverse items-center gap-4;
+
+  &.light {
+    svg {
+      @apply text-black;
+    }
+  }
 }
