--- a/src/UI/footer/Footer.module.scss
+++ b/src/UI/footer/Footer.module.scss
@@ -1,7 +1,17 @@
 .footer {
-  @apply flex justify-around py-12
+  @apply w-full flex justify-around py-12
   min-[320px]:flex-col min-[320px]:items-center min-[320px]:gap-y-3 
   md:flex-row md:items-baseline md:gap-y-0;
+
+  &.light {
+    h4 {
+      @apply text-dark-green;
+    }
+
+    .listItem {
+      @apply text-gray-800;
+    }
+  }
 
   div {
     @apply flex flex-col gap-y-4
@@ -35,7 +45,7 @@
     ul {
       @apply flex flex-col gap-2 mt-4;
 
-      li {
+      .listItem {
         @apply text-xs sm:text-base;
       }
     }
