--- a/src/pages/main/components/choose/Choose.module.scss
+++ b/src/pages/main/components/choose/Choose.module.scss
@@ -1,6 +1,12 @@
 .container {
   @apply flex flex-col gap-4 md:flex-row;
 
+  &.light {
+    p {
+      @apply text-white;
+    }
+  }
+
   .card {
     @apply relative w-full p-12 flex flex-col gap-y-2  bg-stone-900 rounded-default md:w-1/3 md:p-4;
     &:hover {
