--- a/src/pages/main/components/coaches/Coaches.module.scss
+++ b/src/pages/main/components/coaches/Coaches.module.scss
@@ -4,6 +4,12 @@
   .card {
     @apply flex flex-col gap-3 w-1/3;
 
+    &.light {
+      h3 {
+        @apply text-gray-800;
+      }
+    }
+
     img {
       @apply h-[350px] object-cover;
     }
