--- a/src/pages/main/components/hero/components/HeroCards/HeroCards.module.scss
+++ b/src/pages/main/components/hero/components/HeroCards/HeroCards.module.scss
@@ -1,5 +1,10 @@
 .card {
   @apply w-1/3 flex flex-col items-center gap-4 text-center;
+  &.light {
+    p {
+      @apply text-gray-200;
+    }
+  }
   h1 {
     @apply mt-[4px]  min-[320px]:text-2xl sm:text-5xl sm:leading-[1.5];
   }
