feat: add change language and theme in section news

--- a/src/components/MySwiper/MySwiper.module.scss
+++ b/src/components/MySwiper/MySwiper.module.scss
@@ -3,5 +3,5 @@
 }
 
 .bulletActive {
-  @apply bg-white w-3 h-3 inline-block rounded-full;
+  @apply bg-acid-green w-3 h-3 inline-block rounded-full;
 }
