--- a/src/components/SwiperButtons/SwiperButtons.module.scss
+++ b/src/components/SwiperButtons/SwiperButtons.module.scss
@@ -2,6 +2,6 @@
   @apply w-full flex justify-center gap-4 mt-4;
 
   button {
-    @apply text-4xl cursor-pointer z-[1];
+    @apply text-4xl cursor-pointer z-[1] disabled:opacity-50;
   }
 }
