refactor: add a hook to monitor screen width, localStorage and use them

--- a/src/UI/header/Header.module.scss
+++ b/src/UI/header/Header.module.scss
@@ -24,11 +24,7 @@
   }
 
   .navigation {
-    @apply hidden;
-
-    &.active {
-      @apply block;
-    }
+    @apply hidden md:block;
 
     ul {
       @apply flex gap-20;
