refactor: change registrarion

--- a/src/pages/registration/components/registrySwiper/RegistrySwiper.module.scss
+++ b/src/pages/registration/components/registrySwiper/RegistrySwiper.module.scss
@@ -2,7 +2,7 @@
   @apply w-full h-full;
 
   .swiper {
-    @apply w-full h-full;
+    @apply w-full h-full flex flex-col items-center;
 
     .slide {
       @apply flex items-center justify-center;
