--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -9,11 +9,16 @@
 body {
   @apply flex flex-col justify-between items-center m-default bg-black text-white;
 
+  header,
+  footer,
+  section {
+    @apply lg:max-w-3xl xl:max-w-container 2xl:max-w-6xl;
+  }
+
   section {
     @apply relative py-12 px-2 flex flex-col items-center gap-y-6 
-    min-[320px]:max-w-xs
-    sm:max-w-lg 
-    md:px-0 md:max-w-2xl lg:max-w-3xl xl:max-w-container 2xl:max-w-6xl;
+    md:px-0 
+    min-[320px]:max-w-xs sm:max-w-lg md:max-w-2xl;
 
     h2 {
       @apply text-left min-[320px]:text-xl sm:text-3xl;
