--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -10,15 +10,14 @@ body {
   @apply flex flex-col justify-between items-center m-default bg-black text-white;
 
   header,
-  footer,
-  section {
+  footer {
     @apply lg:max-w-3xl xl:max-w-container 2xl:max-w-6xl;
   }
 
   section {
     @apply relative py-12 px-2 flex flex-col items-center gap-y-6 
     md:px-0 
-    min-[320px]:max-w-xs sm:max-w-lg md:max-w-2xl;
+    min-[320px]:max-w-xs sm:max-w-lg md:max-w-2xl lg:max-w-3xl xl:max-w-container 2xl:max-w-6xl;
 
     h2 {
       @apply text-left min-[320px]:text-xl sm:text-3xl;
